# lyxal_encoding

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
base-x/: Cargo.toml  README.md  SAFETY.md  bench_results.txt
base-x/benches/: base.rs
base-x/fuzz/: Cargo.toml
base-x/fuzz/fuzz_targets/: fuzz_base_x.rs
base-x/src/: alphabet.rs  bigint.rs  decoder.rs  encoder.rs  lib.rs
base256emoji/: Cargo.toml  README.md
base256emoji/benches/: emoji_bench.rs
base256emoji/fixtures/: emoji_fixtures.json
base256emoji/fuzz/: Cargo.toml
base256emoji/fuzz/fuzz_targets/: emoji_roundtrip.rs
base256emoji/src/: lib.rs
base45/: Cargo.toml  README.md
base45/benches/: bench.rs
base45/fuzz/: Cargo.toml
base45/fuzz/fuzz_targets/: fuzz_roundtrip.rs
base45/src/: alphabet.rs  decode.rs  encode.rs  lib.rs  tests.rs
data-encoding/: Cargo.toml  README.md  TODO.md  TODO_GOOGLE_GRADE.md  fusion-base-x.md
data-encoding/benches/: benchmark.rs
data-encoding/fuzz/: Cargo.toml
data-encoding/fuzz/fuzz_targets/: fuzz_roundtrip.rs
data-encoding/proptest-regressions/: lib.txt
data-encoding/src/: arithmetic.rs  bigint.rs  data.rs  lib.rs
data-encoding/tests/: lib.rs
multibase/: Cargo.toml
multibase/src/: base.rs  error.rs  impls.rs  lib.rs
multibase/tests/: lib.rs
