[workspace]
resolver = "2"
members = [
    "multibase",
    "base-x",
    "base256emoji",
    "data-encoding",
    "base45",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
# Dépendances internes
multibase = { path = "multibase", version = "0.0.1" }
base-x = { path = "base-x", version = "0.0.1", default-features = false }
base256emoji = { path = "base256emoji", version = "0.0.1", package = "lyxal-base256emoji" }
data-encoding = { path = "data-encoding", version = "0.0.1", default-features = false }
base45 = { path = "base45", version = "0.0.1", default-features = false }

# Dépendances communes externes
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
data-encoding-macro = "0.1.9"
criterion = "0.8"
rand = "0.8"
json = "0.12"
bencher = "0.1"
proptest = "1.0"
hex = "0.4"
serde_json = "1.0"
